@@ -1,0 +1,2 @@
+#define PGEN
+#include "parsetok.c"
